--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         /* --- Hero Section --- */
         .hero {
-            background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('file:///C:/Users/hiup/Downloads/Tunes.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('Tunes.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -316,4 +316,5 @@
 </script>
 
 </body>
+
 </html>
