--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         .logo:hover .nav-logo-img { transform: rotate(-10deg) scale(1.1); }
 
         .hero {
-            background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('Tunes.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('./Tunes.jpg');
             background-size: cover; background-position: center;
             padding: 100px 20px; text-align: center;
             border-bottom-left-radius: 50px; border-bottom-right-radius: 50px; color: white;
@@ -218,5 +218,6 @@ s0.parentNode.insertBefore(s1,s0);
     
 </body>
 </html>
+
 
 
